<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".DodanieTransakcji" >

    <EditText
    	android:id="@+id/nazwa"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:minHeight="64dp"
    	android:hint="@string/nazwa"
    	android:textColor="#666"
    	android:textSize="16sp"
    	android:background="#00000000"
    	android:padding="10dp"
    	android:inputType="text" />    
		<LinearLayout 
		    android:id="@+id/kosztAparat"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/nazwa"
		    android:background="#fff"
		    android:gravity="center"
		    android:orientation="horizontal"
		    android:minHeight="64dp" >		
		    <EditText
		        android:id="@+id/koszt"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:padding="10dp"
		        android:hint="@string/koszt"
		        android:textColor="#666"
    			android:textSize="16sp"
		        android:background="#00000000"
		        android:inputType="numberDecimal"
			    android:digits="0123456789.," />		
		    <View
		        android:layout_width="1dp"
		        android:layout_height="match_parent"
		        android:layout_margin="10dp"
		        android:background="#666" />		
		    <ImageView
		        android:id="@+id/aparat"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="10dp"
		        android:src="@drawable/aparat"
			    android:clickable="true" />
		
		</LinearLayout>
	<View
    	android:layout_width="match_parent"
    	android:layout_height="1dp"    
    	android:layout_below="@id/nazwa"
    	android:background="#666666" />
	<View
    	android:layout_width="match_parent"
    	android:layout_height="1dp"    
    	android:layout_below="@id/kosztAparat"
    	android:background="#666666" />
    <AutoCompleteTextView
	    android:id="@+id/tag"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="64dp"
	    android:layout_below="@id/kosztAparat"
    	android:hint="@string/tag"
    	android:textColor="#666"
    	android:textSize="16sp"
    	android:background="#00000000"
    	android:padding="10dp"
    	android:inputType="text" />
    <View
    	android:layout_width="match_parent"
    	android:layout_height="1dp"    
    	android:layout_below="@id/tag"
    	android:background="#666666" />
	    <RelativeLayout 
	        android:id="@+id/rl"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:minHeight="64dp"
		    android:layout_below="@id/tag"
		    android:gravity="center"
		    android:orientation="vertical" >
			<TextView 
		        android:id="@+id/wydatek"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:text="@string/wydatek"
				android:textColor="#666"
				android:textSize="16sp" />
		    <android.widget.Switch
			    android:id="@+id/przelacznik"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_toRightOf="@id/wydatek"
			    android:thumbTextPadding="25dp"
				android:textOn=""
				android:textOff="" />
		    <TextView
		        android:id="@+id/przychod"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:layout_toRightOf="@id/przelacznik"
				android:text="@string/przychod"
				android:textColor="#666"
				android:textSize="16sp" />
		</RelativeLayout>
    <View
    	android:layout_width="match_parent"
    	android:layout_height="1dp"    
    	android:layout_below="@id/rl"
    	android:background="#666666" />
    <Button
        android:id="@+id/dodaj"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="64dp"
        android:layout_below="@id/rl"
        android:text="@string/dodaj"
        android:textColor="#666"
        android:textSize="16sp"
        android:background="#00000000" />

</RelativeLayout>
